Refactor index.html with section elements

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Design</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#design">Design</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
 
@@ -27,17 +27,36 @@
                  <a href="#"><button class="btn">Search</button></a>
              </div>
         </div>  
-        <div class="content">
+        <section id="home" class="content">
             <h1>Learn To<br><span>Fix</span></h1>
             <p class="par">Hi, I know how stressful it feels when your computer <br> 
                 suddenly breaks down-I’ve been there myself. <br> 
                 What started as me fixing my own laptop eventually <br> 
                 grew into a passion for solving tech problems for others.</p>
-                <div class="cn">
-    <a href="#">Visit fb page</a>
-</div>
-        </div>
+            <div class="cn">
+                <a href="#">Visit fb page</a>
+            </div>
+        </section>
+
+        <section id="about" class="page-section">
+            <h2>About</h2>
+            <p>About content...</p>
+        </section>
+
+        <section id="services" class="page-section">
+            <h2>Services</h2>
+            <p>Services content...</p>
+        </section>
+
+        <section id="design" class="page-section">
+            <h2>Design</h2>
+            <p>Design content...</p>
+        </section>
+
+        <section id="contact" class="page-section">
+            <h2>Contact</h2>
+            <p>Contact content...</p>
+        </section>
     </div>
 </body>
 </html>
-
