--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
 </head>
 <body>
     <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">HowToFix101</h2>
+        <header class="site-header">
+            <div class="navbar">
+                 <div class="icon">
+                     <h2 class="logo">HowToFix101</h2>
+                 </div>
+ 
+                 <div class="menu">
+                     <ul>
+                         <li><a href="#home">Home</a></li>
+                         <li><a href="#about">About</a></li>
+                         <li><a href="#services">Services</a></li>
+                         <li><a href="#design">Design</a></li>
+                         <li><a href="#contact">Contact</a></li>
+                     </ul>
+                 </div>
+ 
+                 <div class="search">
+                      <input class="srch" type="search" name="" placeholder="Type To search">
+                      <a href="#"><button class="btn">Search</button></a>
+                  </div>
             </div>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#design">Design</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-
-            <div class="search">
-                 <input class="srch" type="search" name="" placeholder="Type To search">
-                 <a href="#"><button class="btn">Search</button></a>
-             </div>
-        </div>  
+        </header>  
         <section id="home" class="content">
             <h1>Learn To<br><span>Fix</span></h1>
             <p class="par">Hi, I know how stressful it feels when your computer <br> 
