--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                          <li><a href="#home">Home</a></li>
                          <li><a href="#about">About</a></li>
                          <li><a href="#services">Services</a></li>
-                         <li><a href="#design">Design</a></li>
+                         <li><a href="#Portfolio">Portfolio</a></li>
                          <li><a href="#contact">Contact</a></li>
                      </ul>
                  </div>
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <section id="about" class="page-section">
+        <section id="Portfolio" class="page-section">
             <h2>About</h2>
             <p>About content...</p>
         </section>
@@ -62,3 +62,4 @@
     </div>
 </body>
 </html>
+
