--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <section id="Portfolio" class="page-section">
-            <h2>About</h2>
+            <h2>Portfolio</h2>
             <p>About content...</p>
         </section>
 
@@ -62,4 +62,5 @@
     </div>
 </body>
 </html>
+
 
