--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                          <li><a href="#home">Home</a></li>
                          <li><a href="#about">About</a></li>
                          <li><a href="#services">Services</a></li>
-                         <li><a href="#Portfolio">Portfolio</a></li>
+                         <li><a href="#design">Design</a></li>
                          <li><a href="#contact">Contact</a></li>
                      </ul>
                  </div>
@@ -29,38 +29,51 @@
                   </div>
             </div>
         </header>  
-        <section id="home" class="content">
-            <h1>Learn To<br><span>Fix</span></h1>
-            <p class="par">Hi, I know how stressful it feels when your computer <br> 
-                suddenly breaks down-I’ve been there myself. <br> 
-                What started as me fixing my own laptop eventually <br> 
-                grew into a passion for solving tech problems for others.</p>
-            <div class="cn">
-                <a href="#">Visit fb page</a>
+        
+        <section id="home" class="page-section">
+            <div class="section-content">
+                <h1>Learn To<br><span>Fix</span></h1>
+                <p class="par">Hi, I know how stressful it feels when your computer <br> 
+                    suddenly breaks down-I've been there myself. <br> 
+                    What started as me fixing my own laptop eventually <br> 
+                    grew into a passion for solving tech problems for others.</p>
+                <div class="cn">
+                    <a href="#">Visit fb page</a>
+                </div>
             </div>
         </section>
 
-        <section id="Portfolio" class="page-section">
-            <h2>Portfolio</h2>
-            <p>About content...</p>
+        <section id="about" class="page-section">
+            <div class="section-content">
+                <h2>About Us</h2>
+                <p>We are passionate technology experts dedicated to helping you fix your devices.</p>
+                <p>With years of experience in computer repair and IT solutions.</p>
+            </div>
         </section>
 
         <section id="services" class="page-section">
-            <h2>Services</h2>
-            <p>Services content...</p>
+            <div class="section-content">
+                <h2>Our Services</h2>
+                <p>Computer repair, software installation, hardware upgrades, and more.</p>
+                <p>We provide comprehensive tech solutions for all your needs.</p>
+            </div>
         </section>
 
         <section id="design" class="page-section">
-            <h2>Design</h2>
-            <p>Design content...</p>
+            <div class="section-content">
+                <h2>Our Design</h2>
+                <p>Clean, modern solutions tailored to your specific requirements.</p>
+                <p>We focus on both functionality and aesthetics.</p>
+            </div>
         </section>
 
         <section id="contact" class="page-section">
-            <h2>Contact</h2>
-            <p>Contact content...</p>
+            <div class="section-content">
+                <h2>Contact Us</h2>
+                <p>Get in touch with our expert team for all your tech needs.</p>
+                <p>We're here to help you solve any technology challenge.</p>
+            </div>
         </section>
     </div>
 </body>
 </html>
-
-
