--- a/index.html
+++ b/index.html
@@ -59,13 +59,24 @@
             </div>
         </section>
 
-        <section id="design" class="page-section">
-            <div class="section-content">
-                <h2>Our Design</h2>
-                <p>Clean, modern solutions tailored to your specific requirements.</p>
-                <p>We focus on both functionality and aesthetics.</p>
-            </div>
-        </section>
+        <section id="portfolio" class="page-section">
+  <div class="section-content">
+    <h2>Portfolio</h2>
+    <p>Here’s one of my recent repair projects — a laptop that wouldn’t start due to a dead battery. I replaced the old battery, and it’s now working perfectly.</p>
+
+    <div class="portfolio-gallery">
+      <div class="portfolio-item">
+        <img src="b5a54781-2d3b-403c-9567-9149e43ca4d4.jpg" alt="Laptop before battery replacement">
+        <p><strong>Before:</strong> Laptop not powering on due to battery failure</p>
+      </div>
+      <div class="portfolio-item">
+        <img src="e72a0203-fa7e-4a78-a535-da8362617ac2.jpg" alt="Laptop after battery replacement">
+        <p><strong>After:</strong> New battery installed and laptop working again</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
         <section id="contact" class="page-section">
             <div class="section-content">
@@ -77,4 +88,5 @@
     </div>
 </body>
 </html>
+
 
