--- a/index.html
+++ b/index.html
@@ -64,18 +64,21 @@
     <h2>Portfolio</h2>
     <p>Here’s one of my recent repair projects — a laptop that wouldn’t start due to a dead battery. I replaced the old battery, and it’s now working perfectly.</p>
 
-    <div class="portfolio-gallery">
+    <div class="portfolio-comparison">
       <div class="portfolio-item">
+        <h3>Before</h3>
         <img src="b5a54781-2d3b-403c-9567-9149e43ca4d4.jpg" alt="Laptop before battery replacement">
-        <p><strong>Before:</strong> Laptop not powering on due to battery failure</p>
+        <p>Laptop not powering on due to battery failure.</p>
       </div>
       <div class="portfolio-item">
+        <h3>After</h3>
         <img src="e72a0203-fa7e-4a78-a535-da8362617ac2.jpg" alt="Laptop after battery replacement">
-        <p><strong>After:</strong> New battery installed and laptop working again</p>
+        <p>New battery installed — laptop back to life.</p>
       </div>
     </div>
   </div>
 </section>
+
 
 
         <section id="contact" class="page-section">
@@ -88,5 +91,6 @@
     </div>
 </body>
 </html>
+
 
 
