--- a/index.html
+++ b/index.html
@@ -82,15 +82,42 @@
 
 
         <section id="contact" class="page-section">
-            <div class="section-content">
-                <h2>Contact Us</h2>
-                <p>Get in touch with our expert team for all your tech needs.</p>
-                <p>We're here to help you solve any technology challenge.</p>
-            </div>
-        </section>
+  <div class="section-content">
+    <h2>Contact Us</h2>
+    <p>Get in touch with our expert team for all your tech needs.</p>
+    <p>We're here to help you solve any technology challenge.</p>
+
+    <div class="contact-info">
+      <div class="contact-item">
+        <i class="fas fa-phone-alt"></i>
+        <p><strong>Phone:</strong> +63 xxx xxx xxxx</p>
+      </div>
+
+      <div class="contact-item">
+        <i class="fab fa-facebook"></i>
+        <p><strong>Facebook Page:</strong> 
+          <a href="https://www.facebook.com/profile.php?id=61580740565184" target="_blank">
+            HowToFix101
+          </a>
+        </p>
+      </div>
+
+      <div class="contact-item">
+        <i class="fab fa-facebook-messenger"></i>
+        <p><strong>Facebook User:</strong> 
+          <a href="https://www.facebook.com/kylepatrick.millave.1/" target="_blank">
+            Kyle Patrick Millave
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
     </div>
 </body>
 </html>
+
 
 
 
