--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
         <section id="contact" class="page-section">
   <div class="section-content">
-    <h2>Contact Us</h2>
-    <p>Get in touch with our expert team for all your tech needs.</p>
-    <p>We're here to help you solve any technology challenge.</p>
+    <h2>Contact Me</h2>
+    <p>Get in touch with me for all your tech needs.</p>
+    <p>Im here to help you solve any technological challenge.</p>
 
     <div class="contact-info">
       <div class="contact-item">
@@ -117,6 +117,7 @@
     </div>
 </body>
 </html>
+
 
 
 
