--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
 </section>
 
         <section id="about" class="page-section">
-            <div class="section-content">
-                <h2>About Us</h2>
-                <p>We are passionate technology experts dedicated to helping you fix your devices.</p>
-                <p>With years of experience in computer repair and IT solutions.</p>
-            </div>
-        </section>
+  <div class="section-content">
+    <h2>About Us</h2>
+    <p>HowToFix101 started as a simple curiosity — just me, a student, trying to figure out why my old laptop wouldn’t turn on. I searched online, watched tutorials, and step by step, I learned how to bring it back to life. That single moment sparked something bigger — a realization that fixing things doesn’t always need a professional workshop or expensive tools. Sometimes, all you need is a bit of patience and the willingness to learn.</p>
+
+    <p>Our mission is to show that anyone can learn to repair and maintain their own gadgets — from laptops and phones to small electronic devices. With the internet full of guides and tutorials, it’s easier than ever to pick up these skills, save money, and gain confidence in handling everyday tech problems.</p>
+
+    <p>At HowToFix101, we aim to make technology less intimidating and more empowering. We share simple, easy-to-follow repair advice and encourage people to take that first step in fixing something themselves. Every successful repair — big or small — is a victory that builds both knowledge and independence.</p>
+
+    <p>Whether you’re a student trying to fix your own device, a hobbyist who loves taking things apart, or just someone tired of paying too much for repairs, HowToFix101 is here to help you learn, try, and succeed. Fixing isn’t just about saving gadgets — it’s about building confidence, creativity, and a sense of accomplishment.</p>
+  </div>
+</section>
+
 
         <section id="services" class="page-section">
             <div class="section-content">
@@ -117,6 +123,7 @@
     </div>
 </body>
 </html>
+
 
 
 
