--- a/index.html
+++ b/index.html
@@ -46,13 +46,39 @@
         <section id="about" class="page-section">
   <div class="section-content">
     <h2>About Us</h2>
-    <p>HowToFix101 started as a simple curiosity — just me, a student, trying to figure out why my old laptop wouldn’t turn on. I searched online, watched tutorials, and step by step, I learned how to bring it back to life. That single moment sparked something bigger — a realization that fixing things doesn’t always need a professional workshop or expensive tools. Sometimes, all you need is a bit of patience and the willingness to learn.</p>
+    <p>Every repair has a story — and this is mine. HowToFix101 began as a passion project. It started with one broken laptop, a curious mind, and a student determined to learn how things work.</p>
 
-    <p>My mission is to show that anyone can learn to repair and maintain their own gadgets — from laptops and phones to small electronic devices. With the internet full of guides and tutorials, it’s easier than ever to pick up these skills, save money, and gain confidence in handling everyday tech problems.</p>
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-date">Step 1 — The Beginning</div>
+        <div class="timeline-content">
+          <p>It all started when my own laptop suddenly stopped turning on. I didn’t have the budget for a professional repair, so I turned to the internet for help. Hours of watching YouTube tutorials and reading guides led me to my first successful fix — a battery replacement that brought my laptop back to life.</p>
+        </div>
+      </div>
 
-    <p>At HowToFix101, I aim to make technology less intimidating and more empowering. I share simple, easy-to-follow repair advice and encourage people to take that first step in fixing something themselves. Every successful repair — big or small — is a victory that builds both knowledge and independence.</p>
+      <div class="timeline-item">
+        <div class="timeline-date">Step 2 — The Learning Phase</div>
+        <div class="timeline-content">
+          <p>That small success opened my eyes to the world of DIY repair. I started learning more about hardware, troubleshooting, and maintenance. Every time something broke, it became an opportunity to learn — and to realize that fixing things isn’t as hard as it seems.</p>
+        </div>
+      </div>
 
-    <p>Whether you’re a student trying to fix your own device, a hobbyist who loves taking things apart, or just someone tired of paying too much for repairs, HowToFix101 is here to help you learn, try, and succeed. Fixing isn’t just about saving gadgets — it’s about building confidence, creativity, and a sense of accomplishment.</p>
+      <div class="timeline-item">
+        <div class="timeline-date">Step 3 — The Idea</div>
+        <div class="timeline-content">
+          <p>After helping a few friends with their laptops and phones, I realized that many people were in the same situation — they wanted to fix things but didn’t know where to start. That’s when <strong>HowToFix101</strong> was born: a space dedicated to sharing what I learned and showing that anyone can repair their own tech.</p>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-date">Step 4 — The Mission</div>
+        <div class="timeline-content">
+          <p>Today, HowToFix101 stands for something simple but powerful — <em>fixing is learning.</em> I believe anyone can start with basic tools and online resources to repair gadgets, save money, and build confidence. Our goal is to make technology less intimidating and more empowering for everyone.</p>
+        </div>
+      </div>
+    </div>
+
+    <p>So whether you’re a student, a hobbyist, or someone who just loves tinkering, HowToFix101 is here to help you get started. Let’s make fixing things simple, accessible, and rewarding — one project at a time.</p>
   </div>
 </section>
 
@@ -123,6 +149,7 @@
     </div>
 </body>
 </html>
+
 
 
 
