--- a/index.html
+++ b/index.html
@@ -84,12 +84,38 @@
 
 
         <section id="services" class="page-section">
-            <div class="section-content">
-                <h2>Our Services</h2>
-                <p>Computer repair, software installation, hardware upgrades, and more.</p>
-                <p>We provide comprehensive tech solutions for all your needs.</p>
-            </div>
-        </section>
+  <div class="section-content">
+    <h2>My Services</h2>
+    <p>I offer reliable, high-quality repair and maintenance services focused on helping you restore, optimize, and understand your technology — all at affordable rates.</p>
+
+    <div class="services-container">
+      <div class="service-card">
+        <i class="fas fa-tools"></i>
+        <h3>Hardware Repair</h3>
+        <p>I fix common hardware issues such as battery failures, overheating, screen problems, and non-booting laptops using safe and professional repair techniques.</p>
+      </div>
+
+      <div class="service-card">
+        <i class="fas fa-laptop-code"></i>
+        <h3>Software Troubleshooting</h3>
+        <p>From system errors and slow performance to viruses and corrupted files, I diagnose and repair software issues to restore your system’s stability and speed.</p>
+      </div>
+
+      <div class="service-card">
+        <i class="fas fa-microchip"></i>
+        <h3>System Upgrades</h3>
+        <p>Want faster performance? I provide SSD upgrades, RAM installation, and optimization services to extend the life of your device and improve efficiency.</p>
+      </div>
+
+      <div class="service-card">
+        <i class="fas fa-chalkboard-teacher"></i>
+        <h3>Guided Tech Learning</h3>
+        <p>I don’t just fix devices — i teach you how to do it yourself. Learn basic repair skills with clear guidance, perfect for beginners and tech enthusiasts.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
         <section id="portfolio" class="page-section">
   <div class="section-content">
@@ -149,6 +175,7 @@
     </div>
 </body>
 </html>
+
 
 
 
