--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                      </ul>
                  </div>
  
-                 <div class="search">
-                      <input class="srch" type="search" name="" placeholder="Type To search">
-                      <a href="#"><button class="btn">Search</button></a>
-                  </div>
+                <div class="search">
+    <form action="https://www.google.com/search" method="GET" target="_blank" style="display:flex; align-items:center;">
+        <input class="srch" type="text" name="q" placeholder="Type to search" required>
+        <button class="btn" type="submit">🔍</button>
+    </form>
+</div>
+
             </div>
         </header>  
         
@@ -38,7 +41,8 @@
             What started as me fixing my own laptop eventually <br> 
             grew into a passion for solving tech problems for others.</p>
         <div class="cn">
-            <a href="#">Visit fb page</a>
+            <a href="https://www.facebook.com/profile.php?id=61580740565184" target="_blank">Visit fb page</a>
+
         </div>
     </div>
 </section>
@@ -175,6 +179,7 @@
     </div>
 </body>
 </html>
+
 
 
 
