--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>HowToFix101</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="main">
@@ -11,17 +12,22 @@
             <div class="navbar">
                  <div class="icon">
                      <h2 class="logo">HowToFix101</h2>
+                     <div class="menu-toggle" onclick="toggleMenu()">
+    <i class="fas fa-bars"></i>
+</div>
+
                  </div>
  
                  <div class="menu">
-                     <ul>
-                         <li><a href="#home">Home</a></li>
-                         <li><a href="#about">About</a></li>
-                         <li><a href="#services">Services</a></li>
-                         <li><a href="#portfolio">Portfolio</a></li>
-                         <li><a href="#contact">Contact</a></li>
-                     </ul>
-                 </div>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</div>
+
  
                 <div class="search">
     <form onsubmit="searchSite(event)" style="display:flex; align-items:center;">
@@ -206,6 +212,7 @@ function searchSite(event) {
 
 </body>
 </html>
+
 
 
 
