--- a/index.html
+++ b/index.html
@@ -210,8 +210,15 @@ function searchSite(event) {
 }
 </script>
 
+<script>
+function toggleMenu() {
+  document.querySelector(".menu ul").classList.toggle("show");
+}
+</script>
+
 </body>
 </html>
+
 
 
 
