--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div class="main">
         <header class="site-header">
             <div class="navbar">
-                 <div class="icon">
-                     <h2 class="logo">HowToFix101</h2>
-                     <div class="menu-toggle" onclick="toggleMenu()">
-    <i class="fas fa-bars"></i>
-</div>
+    <div class="icon">
+        <h2 class="logo">HowToFix101</h2>
+    </div>
 
-                 </div>
- 
-                 <div class="menu">
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</div>
+    
+    <div class="menu-toggle" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i>
+    </div>
 
+    <div class="menu">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
  
                 <div class="search">
     <form onsubmit="searchSite(event)" style="display:flex; align-items:center;">
@@ -216,8 +216,17 @@ function toggleMenu() {
 }
 </script>
 
+<script>
+function toggleMenu() {
+  const menu = document.querySelector('.menu ul');
+  menu.classList.toggle('show');
+}
+</script>
+
+
 </body>
 </html>
+
 
 
 
