--- a/index.html
+++ b/index.html
@@ -133,17 +133,18 @@
     <p>Here’s one of my recent repair projects — a laptop that wouldn’t start due to a dead battery. I replaced the old battery, and it’s now working perfectly.</p>
 
     <div class="portfolio-comparison">
-      <div class="portfolio-item">
-        <h3>Before</h3>
-        <img src="b5a54781-2d3b-403c-9567-9149e43ca4d4.jpg" alt="Laptop before battery replacement">
-        <p>Laptop not powering on due to battery failure.</p>
-      </div>
-      <div class="portfolio-item">
-        <h3>After</h3>
-        <img src="e72a0203-fa7e-4a78-a535-da8362617ac2.jpg" alt="Laptop after battery replacement">
-        <p>New battery installed — laptop back to life.</p>
-      </div>
-    </div>
+  <div class="portfolio-item">
+    <h3>Before</h3>
+    <img src="e72a0203-fa7e-4a78-a535-da8362617ac2.jpg" alt="Laptop before repair">
+    <p>Laptop not powering on due to battery failure.</p>
+  </div>
+
+  <div class="portfolio-item">
+    <h3>After</h3>
+    <img src="b5a54781-2d3b-403c-9567-9149e43ca4d4.jpg" alt="Laptop after repair">
+    <p>New battery installed — laptop back to life.</p>
+  </div>
+</div>
   </div>
 </section>
 
@@ -226,6 +227,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
